--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -39,7 +39,7 @@ footer{
         }
         .fa-brands.fa-whatsapp{
             font-size: 30px !important;
-            color:  $color-secundario !important;
+            color:  $color-secundario;
         }
         section.footer__desktop__horarios.d-flex.flex-column.align-items-center.p-3{
             h5{
