--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -101,7 +101,7 @@ header {
                     }
                     .fa-brands.fa-whatsapp{
                         font-size: 30px !important;
-                        color:  $color-secundario !important;
+                        color:  $color-secundario;
                     }
                 }
             }
