--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,4 +1,6 @@
 $sombra-global:  5px 10px 20px 2px rgba(230, 36, 36, 0.273) !important;
 $color-primario-nav-footer: #f50f9e4a !important;
 $background-color-navButton-responsive:#fc0da0;
-$color-secundario: white;
+$color-secundario: white !important;
+
+
