--- a/scss/pages/_informacion.scss
+++ b/scss/pages/_informacion.scss
@@ -1,5 +1,11 @@
 /* pagina informacion */
 main{
+    .formasDePago{
+        h3{
+            font-size: 1rem;
+            margin-bottom: 0px;
+        }
+    }
     section.Horarios{
         div.padreHorarios{
             background-color: #f5a7c12e;
