--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -7,7 +7,7 @@ header {
         }
         div.container-fluid{
             .fa-solid.fa-bars{
-                color: white;
+                color: $color-secundario;
             }
             button.navbar-toggler{
                 border: none !important;
@@ -25,8 +25,8 @@ header {
                 padding-bottom: 2px;
             }
             div.offcanvas.offcanvas-start{
-                h5#offcanvasNavbarLabel.offcanvas-title{
-                    color: white;
+                h3#offcanvasNavbarLabel.offcanvas-title{
+                    color: $color-secundario;
                 }
                 div.offcanvas-body{
                     ul{
@@ -48,7 +48,7 @@ header {
                         background-color: #f423a46e;
                         li{
                             a{
-                                color: white !important;
+                                color: $color-secundario;
                                 font-size: 1rem !important;
                                 &:hover{
                                     background-color: #fd029e6e;
@@ -58,7 +58,6 @@ header {
                     }
                     .footer_responsive{
                         display: none;
-
                     }
                     .footer__redesSocialesInstagram{
                         display: flex;
